--- a/USB_Accel_Project/USB_Accel_Project/DockingAnalytics/DockingAnalytics/DockingAnalytics.csproj
+++ b/USB_Accel_Project/USB_Accel_Project/DockingAnalytics/DockingAnalytics/DockingAnalytics.csproj
@@ -249,6 +249,12 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="libraries\WeifenLuo.WinFormsUI.Docking.dll" />
+    <Content Include="OpenTK.dll" />
+    <Content Include="OpenTK.GLControl.dll" />
+    <Content Include="ZedGraph.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
