--- a/USB_Accel_Project/USB_Accel_Project/IXAccel.csproj
+++ b/USB_Accel_Project/USB_Accel_Project/IXAccel.csproj
@@ -34,9 +34,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DockingAnalytics">
-      <HintPath>DockingAnalytics\DockingAnalytics\bin\Release\DockingAnalytics.exe</HintPath>
-    </Reference>
     <Reference Include="LibUsbDotNet">
       <HintPath>.\LibUsbDotNet.dll</HintPath>
     </Reference>
@@ -85,6 +82,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="DockingAnalytics\DockingAnalytics\DockingAnalytics.csproj">
+      <Project>{a3bf2ed8-5215-4a0a-a81e-1e78947ea474}</Project>
+      <Name>DockingAnalytics</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
