--- a/USB_Accel_Project/USB_Accel_Project/DockingAnalytics/DockingAnalytics/DockingAnalytics.csproj
+++ b/USB_Accel_Project/USB_Accel_Project/DockingAnalytics/DockingAnalytics/DockingAnalytics.csproj
@@ -47,6 +47,7 @@
       <HintPath>..\..\..\..\OpenTK\1.0\Binaries\OpenTK\Release\OpenTK.GLControl.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
@@ -69,6 +70,7 @@
   <ItemGroup>
     <Compile Include="AccelerationInfo.cs" />
     <Compile Include="AnalyticsController.cs" />
+    <Compile Include="AppSettings.cs" />
     <Compile Include="BaseDock.cs">
       <SubType>Form</SubType>
     </Compile>
