Adding scaling to saving the file.

--- a/USB_Accel_Project/USB_Accel_Project/DockingAnalytics/DockingAnalytics/DockingAnalytics.csproj
+++ b/USB_Accel_Project/USB_Accel_Project/DockingAnalytics/DockingAnalytics/DockingAnalytics.csproj
@@ -68,6 +68,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccelerationDataConvertor.cs" />
     <Compile Include="AccelerationInfo.cs" />
     <Compile Include="AnalyticsController.cs" />
     <Compile Include="AppSettings.cs" />
