Potentially fixed high/low gain values.

--- a/USB_Accel_Project/USB_Accel_Project/DockingAnalytics/DockingAnalyticsTests/DockingAnalyticsTests.csproj
+++ b/USB_Accel_Project/USB_Accel_Project/DockingAnalytics/DockingAnalyticsTests/DockingAnalyticsTests.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AccelerationDataConversionTests.cs" />
     <Compile Include="AppSettingsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
